FreeRADIUS 3.0.21 Thu 14 Nov 2019 12:00:00 EDT urgency=low
	Feature improvements

	Bug fixes

FreeRADIUS 3.0.20 Thu 14 Nov 2019 12:00:00 EDT urgency=medium
	Feature improvements
	* Add Jenkins continuous integration.  Fixes #2620.
	  Used to build http://packages.networkradius.com/
	* Added Force10 dictionary.
	* Update dictionary.hp with new attributes.  #2690
	* Update dictionary.aruba with new attributes.  #2696
	* Update logrotate settings to rotate as non-root user. #2666
	* Fix side-channel leak in EAP-PWD.  Patch from Mathy Vanhoef.
	* Relax OpenSSL version checks, now that their API is both
	  public, and stable.
	* Note that tls_min_version/tls_max_version also support "1.3"
	  Since there is no standard yet for EAP with TLS 1.3, it
	  will not work.
	* Added tripplite dictionary from #2760.
	* Switch to the async interface for rlm_sql_postgresql so that
	  we can enforce query_timeout.
	* Added new LDAP option 'allow_dangling_group_ref'.
	* Updated documentation and functionality for EAP session caching.
	  See "cache" section of mods-available/eap.
	* Tighten systemd unit file security. Fixes #2637.
	* Disable TLS 1.0 and TLS 1.1 support in the default configuration.
	  We STRONGLY recommend doing this for all installations.
	* Add expansions for *outgoing* Radsec connections.
	  "%{proxy_listen:TLS-...}"  for TLS-Client-Cert-* and TLS-Cert-*
	  attributes. Fixes #2839.
	* Add %{listen:tls} which returns "yes" or "no" for TLS or non-TLS
	  connections.
	* Update dictionary.lancom with new attributes. #2847
	* Added rlm_sql_mongo.  See raddb/mods-available/sql.  Note that
	  this module is experimental.
	* Added more documentation in sites-available/robust-proxy-accounting
	* sqlippool now re-allocates unexpired leases, to prevent IP pool
	  exhaustion when clients perform multiple reauthentication attempts.
	  Patch from Terry Burton.
	* Add support to radmin keep the history in ~/.radmin_history